vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-1.1.0
  name: vaultwarden-vault-becutewith-me
  namespace: vaultwarden
spec:
  hostnames:
  - vault.becutewith.me
  parentRefs:
  - name: gateway
    namespace: gateway
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
